--- a/timelord.html
+++ b/timelord.html
@@ -134,16 +134,7 @@
 
 			
 		</style>
-
-<!--		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> -->
-		<script type='text/javascript' src='jquery.min.js' charset='utf-8'></script>
-
-
-    <link rel="stylesheet" href="css/themes/jquery-mobile-five-swatches.min.css" />
-    <link rel="stylesheet" href="css/themes/jquery.mobile.icons.min.css" />
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.css" />
-    <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
-
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		
 		<script type='text/javascript' src='index.js' charset='utf-8'></script>
 		<script type='text/javascript' src='common.js' charset='utf-8'></script>
@@ -212,31 +203,6 @@
 						$("#search").prop('value', 'Look up GPS of City');
 					});
 				});
-				// TODO: There's a more efficient way of doing this, but I couldn't figure out how to initialize the collapsibleset
-				$('#expandl3l4').toggle(function() {
-					$('#zodicalreleasingl3l4 .ui-collapsible-themed-content').removeClass('ui-collapsible-collapsed');
-					$('#zodicalreleasingl3l4 .ui-collapsible-heading-collapsed').removeClass('ui-collapsible-heading-collapsed');
-					$('#zodicalreleasingl3l4 .ui-collapsible-heading-toggle').removeClass('ui-icon-plus').addClass('ui-icon-minus');
-					$('#zodicalreleasingl3l4 .ui-collapsible-content').removeClass('ui-collapsible-content-collapsed');
-					$('#expandl3l4').removeClass('ui-icon-carat-d').addClass('ui-icon-carat-u');
-				}, function() {
-					$('#zodicalreleasingl3l4 .ui-collapsible-heading-collapsed').addClass('ui-collapsible-heading-collapsed');
-					$('#zodicalreleasingl3l4 .ui-collapsible-heading-toggle').removeClass('ui-icon-minus').addClass('ui-icon-plus');
-					$('#zodicalreleasingl3l4 .ui-collapsible-content').addClass('ui-collapsible-content-collapsed');
-					$('#expandl3l4').removeClass('ui-icon-carat-u').addClass('ui-icon-carat-d');
-				});
-				$('#expandl1l2').toggle(function() {
-					$('#zodicalreleasingl1l2 .ui-collapsible-themed-content').removeClass('ui-collapsible-collapsed');
-					$('#zodicalreleasingl1l2 .ui-collapsible-heading-collapsed').removeClass('ui-collapsible-heading-collapsed');
-					$('#zodicalreleasingl1l2 .ui-collapsible-heading-toggle').removeClass('ui-icon-plus').addClass('ui-icon-minus');
-					$('#zodicalreleasingl1l2 .ui-collapsible-content').removeClass('ui-collapsible-content-collapsed');
-					$('#expandl1l2').removeClass('ui-icon-carat-d').addClass('ui-icon-carat-u');
-				}, function() {
-					$('#zodicalreleasingl1l2 .ui-collapsible-heading-collapsed').addClass('ui-collapsible-heading-collapsed');
-					$('#zodicalreleasingl1l2 .ui-collapsible-heading-toggle').removeClass('ui-icon-minus').addClass('ui-icon-plus');
-					$('#zodicalreleasingl1l2 .ui-collapsible-content').addClass('ui-collapsible-content-collapsed');
-					$('#expandl1l2').removeClass('ui-icon-carat-u').addClass('ui-icon-carat-d');
-				});
 			});
 			
 		</script>
@@ -275,254 +241,9 @@
 </head>
 <body onload='$e.currenttime ("timelord")'>
   <div data-role="page" id="home">
-		<div class="ui-corner-all custom-corners" id="zodicalreleasingdata">
-		  <div class="ui-bar ui-bar-a" id="levelheader">
-		    <h3>Zodical Releasing from Sagitarrius: <img src="img/cancer.png" class="ui-li-icon"><img src="img/gemini.png" class="ui-li-icon"><img src="img/capricorn.png" class="ui-li-icon"><img src="img/pisces.png" class="ui-li-icon"></h3>
-		    <a href="#" id="expandl1l2" class="ui-btn ui-icon-carat-d ui-btn-icon-notext ui-corner-all">No text</a>
-		    <a href="#" id="expandl3l4" class="ui-btn ui-icon-carat-d ui-btn-icon-notext ui-corner-all">No text</a>
-		  </div>
-      <div id="zodicalreleasingl1l2">
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="false" id="test">
-				    <h3><img src="img/gemini.png" alt="Gemini" class="ui-li-icon">9/1/1976 <span class="ui-li-count">0</span></h3>
-				    <ul data-role="listview">
-				        <li data-icon="false" data-theme="a"><a href="#"><img src="img/gemini.png" alt="Gemini" class="ui-li-icon">9/1/1976 <span class="ui-li-count">0</span></a></li>
-				        <li data-icon="false" data-theme="a"><a href="#"><img src="img/cancer.png" alt="Cancer" class="ui-li-icon">4/24/1978<span class="ui-li-count">1.3</span></a></li>
-				        <li data-icon="false" data-theme="a" id ="leoleo"><a href="#"><img src="img/leo.png" class="ui-li-icon">5/13/1980<span class="ui-li-count">3.7</span></a></li>
-				        <li data-icon="false" data-theme="a"><a href="#"><img src="img/virgo.png" class="ui-li-icon">12/4/1981<span class="ui-li-count">5.2</span></a></li>
-				        <li data-icon="false" data-theme="a"><a href="#"><img src="img/libra.png" class="ui-li-icon">7/27/1983<span class="ui-li-count">7.8</span></a></li>
-				        <li data-icon="false" data-theme="a"><a href="#"><img src="img/scorpio.png" class="ui-li-icon">3/23/1984<span class="ui-li-count">8.2</span></a></li>
-				        <li data-icon="false" data-theme="a"><a href="#"><img src="img/sagittarius.png" class="ui-li-icon">6/16/1985<span class="ui-li-count">8.8</span></a></li>
-				        <li data-icon="false" data-theme="a"><a href="#"><img src="img/capricorn.png" class="ui-li-icon">6/11/1986<span class="ui-li-count">9.7</span></a></li>
-				        <li data-icon="false" data-theme="a"><a href="#"><img src="img/aquarius.png" class="ui-li-icon">8/29/1988<span class="ui-li-count">10.2</span></a></li>
-				        <li data-icon="false" data-theme="a"><a href="#"><img src="img/pisces.png" class="ui-li-icon">2/15/1991<span class="ui-li-count">12.4</span></a></li>
-				        <li data-icon="false" data-theme="a"><a href="#"><img src="img/aries.png" class="ui-li-icon">2/10/1992<span class="ui-li-count">14.5</span></a></li>
-				        <li data-icon="false" data-theme="a"><a href="#"><img src="img/taurus.png" class="ui-li-icon">5/5/1993<span class="ui-li-count">16.9</span></a></li>
-				        <li data-icon="false" class="loosingbond" data-theme="e"><a href="#"><img src="img/sagittarius.png" class="ui-li-icon">88/88/8888 LB<span class="ui-li-count">88.8</span></a></li>
-				        <li data-icon="false" data-theme="a"><a href="#"><img src="img/capricorn.png" class="ui-li-icon">12/26/1994</a></li>
-				    </ul>
-				</div><!-- /collapsible -->
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3><img src="img/cancer.png" alt="Cancer" class="ui-li-icon">5/19/1996 <span class="ui-li-count">19.6</span></h3>
-				    <ul data-role="listview">
-				        <li><a href="#">4 5/19/1996</a></li>
-				        <li><a href="#">5 6/8/1998</a></li>
-				        <li><a href="#">6 12/30/1999</a></li>
-				        <li><a href="#">7 8/21/2001</a></li>
-				        <li><a href="#">8 4/18/2002</a></li>
-				        <li><a href="#">9 7/12/2003</a></li>
-				        <li><a href="#">10 7/6/2004</a></li>
-				        <li><a href="#">11 9/24/2006</a></li>
-				        <li><a href="#">12 3/12/2009</a></li>
-				        <li><a href="#">1 3/7/2010</a></li>
-				        <li><a href="#">2 5/31/2011</a></li>
-				        <li><a href="#">3 1/26/2012</a></li>
-				        <li class="loosingbond"><a href="#">10 9/17/2013 LB</a></li>
-				        <li><a href="#">11 12/6/2015</a></li>
-				        <li><a href="#">12 5/24/2018</a></li>
-				        <li><a href="#">1 5/19/2019</a></li>
-				        <li><a href="#">2 8/11/2020</a></li>
-				    </ul>
-				</div><!-- /collapsible -->
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>5 1/8/2021</h3>
-				    <ul data-role="listview">
-				        <li><a href="#">5 1/8/2021</a></li>
-				        <li><a href="#">6 8/1/2022</a></li>
-				        <li><a href="#">7 3/23/2024</a></li>
-				        <li><a href="#">8 11/18/2024</a></li>
-				        <li><a href="#">9 2/11/2026</a></li>
-				        <li><a href="#">10 2/6/2027</a></li>
-				        <li><a href="#">11 4/26/2029</a></li>
-				        <li><a href="#">12 10/13/2031</a></li>
-				        <li><a href="#">1 10/7/2032</a></li>
-				        <li><a href="#">2 12/31/2033</a></li>
-				        <li><a href="#">3 8/28/2034</a></li>
-				        <li><a href="#">4 4/19/2036</a></li>
-				        <li class="loosingbond"><a href="#">11 5/9/2038 LB</a></li>
-				    </ul>
-				</div><!-- /collapsible -->
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>6 10/1/2039</h3>
-				    <ul data-role="listview">    
-				        <li><a href="#">6 10/1/2039</a></li>
-				        <li><a href="#">7 5/23/2041</a></li>
-				        <li><a href="#">8 1/18/2042</a></li>
-				        <li><a href="#">9 4/13/2043</a></li>
-				        <li><a href="#">10 4/7/2044</a></li>
-				        <li><a href="#">11 6/26/2046</a></li>
-				        <li><a href="#">12 12/12/2048</a></li>
-				        <li><a href="#">1 12/7/2049</a></li>
-				        <li><a href="#">2 3/2/2051</a></li>
-				        <li><a href="#">3 10/28/2051</a></li>
-				        <li><a href="#">4 6/19/2053</a></li>
-				        <li><a href="#">5 7/9/2055</a></li>
-				        <li class="loosingbond"><a href="#">12 1/29/2057 LB</a></li>
-				        <li><a href="#">1 1/24/2058</a></li>
-				        <li><a href="#">2 4/19/2059</a></li>
-				    </ul>    
-				</div><!-- /collapsible -->
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>7 6/18/2059</h3>
-				    <ul data-role="listview">
-				        <li><a href="#">7 6/18/2059</a></li>
-				        <li><a href="#">8 2/13/2060</a></li>
-				        <li><a href="#">9 5/8/2061</a></li>
-				        <li><a href="#">10 5/3/2062</a></li>
-				        <li><a href="#">11 7/21/2064</a></li>
-				        <li><a href="#">12 1/7/2067</a></li>
-				    </ul>    
-				</div><!-- /collapsible -->
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>8 5/7/2067</h3>
-				    <ul data-role="listview">
-				        <li><a href="#">8 5/7/2067</a></li>
-				        <li><a href="#">9 7/30/2068</a></li>
-				        <li><a href="#">10 7/25/2069</a></li>
-				        <li><a href="#">11 10/13/2071</a></li>
-				        <li><a href="#">12 3/31/2074</a></li>
-				        <li><a href="#">1 3/26/2075</a></li>
-				        <li><a href="#">2 6/18/2076</a></li>
-				        <li><a href="#">3 2/13/2077</a></li>
-				        <li><a href="#">4 10/6/2078</a></li>
-				        <li><a href="#">5 10/25/2080</a></li>
-				    </ul>    
-				</div><!-- /collapsible -->
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>9 2/17/2082</h3>
-				    <ul data-role="listview">
-				        <li><a href="#">9 2/17/2082</a></li>
-				        <li><a href="#">10 2/12/2083</a></li>
-				        <li><a href="#">11 5/2/2085</a></li>
-				        <li><a href="#">12 10/19/2087</a></li>
-				        <li><a href="#">1 10/13/2088</a></li>
-				        <li><a href="#">2 1/6/2090</a></li>
-				        <li><a href="#">3 9/3/2090</a></li>
-				        <li><a href="#">4 4/25/2092</a></li>
-				    </ul>    
-				</div><!-- /collapsible -->
-		</div>
-				
-		<div id="zodicalreleasingl3l4">    
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="false">
-				    <h3><img src="img/gemini.png" alt="Gemini" class="ui-li-icon">9/1/1976</h3>
-				    <ul data-role="listview">
-				        <li data-icon="false"><a href="#"><img src="img/gemini.png" alt="Gemini" class="ui-li-icon">9/1/1976 - 05:05<span class="ui-li-count">0</span></a></li>
-				        <li data-icon="false"><a href="#"><img src="img/cancer.png" alt="Cancer" class="ui-li-icon">4/24/1978 - 04:05<span class="ui-li-count">1.3</span></a></li>
-				        <li data-icon="false"><a href="#"><img src="img/leo.png" class="ui-li-icon">5/13/1980 - 14:25<span class="ui-li-count">3.7</span></a></li>
-				        <li data-icon="false"><a href="#"><img src="img/virgo.png" class="ui-li-icon">88/88/8888 - 88:88 LB<span class="ui-li-count">88.8</span></a></li>
-				        <li data-icon="false"><a href="#"><img src="img/libra.png" class="ui-li-icon">7/27/1983 - 18:16<span class="ui-li-count">7.8</span></a></li>
-				        <li data-icon="false"><a href="#"><img src="img/scorpio.png" class="ui-li-icon">3/23/1984<span class="ui-li-count">8.2</span></a></li>
-				        <li data-icon="false"><a href="#"><img src="img/sagittarius.png" class="ui-li-icon">6/16/1985<span class="ui-li-count">8.8</span></a></li>
-				        <li data-icon="false"><a href="#"><img src="img/capricorn.png" class="ui-li-icon">6/11/1986<span class="ui-li-count">9.7</span></a></li>
-				        <li data-icon="false"><a href="#"><img src="img/aquarius.png" class="ui-li-icon">8/29/1988<span class="ui-li-count">10.2</span></a></li>
-				        <li data-icon="false"><a href="#"><img src="img/pisces.png" class="ui-li-icon">2/15/1991<span class="ui-li-count">12.4</span></a></li>
-				        <li data-icon="false"><a href="#"><img src="img/aries.png" class="ui-li-icon">2/10/1992<span class="ui-li-count">14.5</span></a></li>
-				        <li data-icon="false"><a href="#"><img src="img/taurus.png" class="ui-li-icon">5/5/1993<span class="ui-li-count">16.9</span></a></li>
-				        <li data-icon="false" class="loosingbond"><a href="#"><img src="img/sagittarius.png" class="ui-li-icon">12/31/1993 LB<span class="ui-li-count">17.1</span></a></li>
-				        <li data-icon="false"><a href="#"><img src="img/capricorn.png" class="ui-li-icon">12/26/1994</a></li>
-				    </ul>
-				</div><!-- /collapsible -->
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>4 5/19/1996</h3>
-				    <ul data-role="listview">
-				        <li><a href="#">4 5/19/1996</a></li>
-				        <li><a href="#">5 6/8/1998</a></li>
-				        <li><a href="#">6 12/30/1999</a></li>
-				        <li><a href="#">7 8/21/2001</a></li>
-				        <li><a href="#">8 4/18/2002</a></li>
-				        <li><a href="#">9 7/12/2003</a></li>
-				        <li><a href="#">10 7/6/2004</a></li>
-				        <li><a href="#">11 9/24/2006</a></li>
-				        <li><a href="#">12 3/12/2009</a></li>
-				        <li><a href="#">1 3/7/2010</a></li>
-				        <li><a href="#">2 5/31/2011</a></li>
-				        <li><a href="#">3 1/26/2012</a></li>
-				        <li class="loosingbond"><a href="#">10 9/17/2013 LB</a></li>
-				        <li><a href="#">11 12/6/2015</a></li>
-				        <li><a href="#">12 5/24/2018</a></li>
-				        <li><a href="#">1 5/19/2019</a></li>
-				        <li><a href="#">2 8/11/2020</a></li>
-				    </ul>
-				</div><!-- /collapsible -->
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>5 1/8/2021</h3>
-				    <ul data-role="listview">
-				        <li><a href="#">5 1/8/2021</a></li>
-				        <li><a href="#">6 8/1/2022</a></li>
-				        <li><a href="#">7 3/23/2024</a></li>
-				        <li><a href="#">8 11/18/2024</a></li>
-				        <li><a href="#">9 2/11/2026</a></li>
-				        <li><a href="#">10 2/6/2027</a></li>
-				        <li><a href="#">11 4/26/2029</a></li>
-				        <li><a href="#">12 10/13/2031</a></li>
-				        <li><a href="#">1 10/7/2032</a></li>
-				        <li><a href="#">2 12/31/2033</a></li>
-				        <li><a href="#">3 8/28/2034</a></li>
-				        <li><a href="#">4 4/19/2036</a></li>
-				        <li class="loosingbond"><a href="#">11 5/9/2038 LB</a></li>
-				    </ul>
-				</div><!-- /collapsible -->
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>6 10/1/2039</h3>
-				    <ul data-role="listview">    
-				        <li><a href="#">6 10/1/2039</a></li>
-				        <li><a href="#">7 5/23/2041</a></li>
-				        <li><a href="#">8 1/18/2042</a></li>
-				        <li><a href="#">9 4/13/2043</a></li>
-				        <li><a href="#">10 4/7/2044</a></li>
-				        <li><a href="#">11 6/26/2046</a></li>
-				        <li><a href="#">12 12/12/2048</a></li>
-				        <li><a href="#">1 12/7/2049</a></li>
-				        <li><a href="#">2 3/2/2051</a></li>
-				        <li><a href="#">3 10/28/2051</a></li>
-				        <li><a href="#">4 6/19/2053</a></li>
-				        <li><a href="#">5 7/9/2055</a></li>
-				        <li class="loosingbond"><a href="#">12 1/29/2057 LB</a></li>
-				        <li><a href="#">1 1/24/2058</a></li>
-				        <li><a href="#">2 4/19/2059</a></li>
-				    </ul>    
-				</div><!-- /collapsible -->
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>7 6/18/2059</h3>
-				    <ul data-role="listview">
-				        <li><a href="#">7 6/18/2059</a></li>
-				        <li><a href="#">8 2/13/2060</a></li>
-				        <li><a href="#">9 5/8/2061</a></li>
-				        <li><a href="#">10 5/3/2062</a></li>
-				        <li><a href="#">11 7/21/2064</a></li>
-				        <li><a href="#">12 1/7/2067</a></li>
-				    </ul>    
-				</div><!-- /collapsible -->
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>8 5/7/2067</h3>
-				    <ul data-role="listview">
-				        <li><a href="#">8 5/7/2067</a></li>
-				        <li><a href="#">9 7/30/2068</a></li>
-				        <li><a href="#">10 7/25/2069</a></li>
-				        <li><a href="#">11 10/13/2071</a></li>
-				        <li><a href="#">12 3/31/2074</a></li>
-				        <li><a href="#">1 3/26/2075</a></li>
-				        <li><a href="#">2 6/18/2076</a></li>
-				        <li><a href="#">3 2/13/2077</a></li>
-				        <li><a href="#">4 10/6/2078</a></li>
-				        <li><a href="#">5 10/25/2080</a></li>
-				    </ul>    
-				</div><!-- /collapsible -->
-				<div data-role="collapsible" data-inset="false" data-theme="b" data-collapsed="true">
-				    <h3>9 2/17/2082</h3>
-				    <ul data-role="listview">
-				        <li><a href="#">9 2/17/2082</a></li>
-				        <li><a href="#">10 2/12/2083</a></li>
-				        <li><a href="#">11 5/2/2085</a></li>
-				        <li><a href="#">12 10/19/2087</a></li>
-				        <li><a href="#">1 10/13/2088</a></li>
-				        <li><a href="#">2 1/6/2090</a></li>
-				        <li><a href="#">3 9/3/2090</a></li>
-				        <li><a href="#">4 4/25/2092</a></li>
-				    </ul>    
-				</div><!-- /collapsible -->
-      </div>
-    </div>
+		<div id="zodicalreleasingdata">
+				<canvas id="zodicalreleasing" width = "460" height = "770" ></canvas>
+		</div>		
     
 		<div id="container">
 			<canvas id="chartcanvas" width = "460" height = "460" ></canvas>
